Increase download button touch area
* MOPPIOS-868

--- a/MoppApp/MoppApp/Container.storyboard
+++ b/MoppApp/MoppApp/Container.storyboard
@@ -146,12 +146,14 @@
                                                         <action selector="removeAction" destination="6pq-Cm-b20" eventType="touchUpInside" id="dz7-pi-paM"/>
                                                     </connections>
                                                 </button>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IKh-UH-oRj">
-                                                    <rect key="frame" x="619" y="21" width="32" height="44"/>
+                                                <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IKh-UH-oRj">
+                                                    <rect key="frame" x="619" y="0.0" width="45" height="76"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="32" id="P4H-Lq-zDe"/>
-                                                        <constraint firstAttribute="height" constant="44" id="VbW-oc-v2v"/>
+                                                        <constraint firstAttribute="width" constant="45" id="P4H-Lq-zDe"/>
+                                                        <constraint firstAttribute="height" constant="76" id="VbW-oc-v2v"/>
                                                     </constraints>
+                                                    <inset key="contentEdgeInsets" minX="0.0" minY="9" maxX="0.0" maxY="0.0"/>
+                                                    <inset key="imageEdgeInsets" minX="0.0" minY="1" maxX="0.0" maxY="0.0"/>
                                                     <state key="normal" image="iconDownload"/>
                                                     <connections>
                                                         <action selector="saveAction:" destination="6pq-Cm-b20" eventType="touchUpInside" id="L9N-73-HTL"/>
@@ -169,17 +171,17 @@
                                                 <constraint firstAttribute="trailing" secondItem="Tgu-rh-2tI" secondAttribute="trailing" constant="16" id="8XZ-T2-tL2"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="pYd-Yj-8Ay" secondAttribute="bottom" id="GK1-Id-KzX"/>
                                                 <constraint firstItem="pYd-Yj-8Ay" firstAttribute="top" secondItem="o5E-gs-VpH" secondAttribute="topMargin" id="HgC-Vb-paE"/>
-                                                <constraint firstItem="IKh-UH-oRj" firstAttribute="trailing" secondItem="o5E-gs-VpH" secondAttribute="trailingMargin" id="Lkb-5f-2XO"/>
+                                                <constraint firstItem="IKh-UH-oRj" firstAttribute="trailing" secondItem="o5E-gs-VpH" secondAttribute="trailingMargin" constant="13" id="Lkb-5f-2XO"/>
                                                 <constraint firstItem="pYd-Yj-8Ay" firstAttribute="leading" secondItem="o5E-gs-VpH" secondAttribute="leadingMargin" id="M9r-H4-fCV"/>
                                                 <constraint firstItem="Tgu-rh-2tI" firstAttribute="top" secondItem="dlt-jI-SME" secondAttribute="bottom" constant="11" id="Nfe-AN-Okj"/>
                                                 <constraint firstItem="zV0-PM-P6i" firstAttribute="leading" secondItem="pYd-Yj-8Ay" secondAttribute="trailing" constant="8" symbolic="YES" id="PaB-ey-54Z"/>
                                                 <constraint firstItem="Tgu-rh-2tI" firstAttribute="leading" secondItem="o5E-gs-VpH" secondAttribute="leading" constant="16" id="QVO-jK-dQM"/>
                                                 <constraint firstItem="zV0-PM-P6i" firstAttribute="top" secondItem="o5E-gs-VpH" secondAttribute="topMargin" constant="10.5" id="cel-CW-ICI"/>
                                                 <constraint firstItem="IKh-UH-oRj" firstAttribute="leading" secondItem="zV0-PM-P6i" secondAttribute="trailing" constant="4" id="dVS-TO-WeG"/>
-                                                <constraint firstItem="IKh-UH-oRj" firstAttribute="top" secondItem="o5E-gs-VpH" secondAttribute="topMargin" constant="10" id="iTV-eB-gpe"/>
+                                                <constraint firstItem="IKh-UH-oRj" firstAttribute="top" secondItem="o5E-gs-VpH" secondAttribute="topMargin" constant="-11" id="iTV-eB-gpe"/>
                                                 <constraint firstItem="dlt-jI-SME" firstAttribute="top" secondItem="o5E-gs-VpH" secondAttribute="topMargin" id="igk-9X-M66"/>
                                                 <constraint firstAttribute="bottom" secondItem="Tgu-rh-2tI" secondAttribute="bottom" id="izr-ax-UrV"/>
-                                                <constraint firstItem="Tgu-rh-2tI" firstAttribute="top" secondItem="IKh-UH-oRj" secondAttribute="bottom" constant="11" id="lzD-Ai-UOd"/>
+                                                <constraint firstItem="Tgu-rh-2tI" firstAttribute="top" secondItem="IKh-UH-oRj" secondAttribute="bottom" id="lzD-Ai-UOd"/>
                                                 <constraint firstItem="Tgu-rh-2tI" firstAttribute="top" secondItem="zV0-PM-P6i" secondAttribute="bottom" constant="10.5" id="t8i-VW-nOx"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -207,7 +209,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="252" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="751" text="MARI MAASIKAS,9800984323" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VhO-fS-PmX">
-                                                    <rect key="frame" x="46" y="11" width="217.5" height="22.5"/>
+                                                    <rect key="frame" x="46" y="11" width="231.5" height="22.5"/>
                                                     <fontDescription key="fontDescription" name="RobotoCondensed-Bold" family="Roboto Condensed" pointSize="17"/>
                                                     <color key="textColor" red="0.35686274509999999" green="0.35686274509999999" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -231,7 +233,7 @@
                                                     </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="999" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Allkiri on kehtiv" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yfh-N8-Cag">
-                                                    <rect key="frame" x="46" y="41.5" width="109.5" height="19"/>
+                                                    <rect key="frame" x="46" y="41.5" width="108" height="19"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="19" id="GLM-Ie-iKS"/>
                                                         <constraint firstAttribute="width" relation="lessThanOrEqual" constant="153" id="u9S-YJ-yuT"/>
@@ -241,13 +243,13 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Signed 12.08.2017, 13:22" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hpW-Rn-1bR">
-                                                    <rect key="frame" x="46" y="68" width="181.5" height="19"/>
+                                                    <rect key="frame" x="46" y="68" width="195.5" height="19"/>
                                                     <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
                                                     <color key="textColor" red="0.60860168147208116" green="0.60860168147208116" blue="0.60860168147208116" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Test signature" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vmJ-hw-p5N">
-                                                    <rect key="frame" x="163" y="41" width="111" height="19"/>
+                                                    <rect key="frame" x="161.5" y="41" width="111" height="19"/>
                                                     <color key="backgroundColor" name="MoppWarning"/>
                                                     <color key="tintColor" systemColor="darkTextColor"/>
                                                     <constraints>
@@ -618,11 +620,12 @@
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9eg-iF-HaU">
-                                                    <rect key="frame" x="619" y="21" width="32" height="44"/>
+                                                    <rect key="frame" x="619" y="4" width="42" height="73"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="32" id="8Xr-Zc-tSk"/>
-                                                        <constraint firstAttribute="height" constant="44" id="mZc-O1-MRq"/>
+                                                        <constraint firstAttribute="width" constant="42" id="8Xr-Zc-tSk"/>
+                                                        <constraint firstAttribute="height" constant="73" id="mZc-O1-MRq"/>
                                                     </constraints>
+                                                    <inset key="contentEdgeInsets" minX="0.0" minY="5" maxX="0.0" maxY="0.0"/>
                                                     <state key="normal" image="iconDownload"/>
                                                     <connections>
                                                         <action selector="saveAction:" destination="brX-Gs-sMU" eventType="touchUpInside" id="64d-0t-yPh"/>
@@ -635,15 +638,15 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="9ZG-2U-aUl" firstAttribute="leading" secondItem="Sza-8J-Yjw" secondAttribute="leadingMargin" id="C8G-Vq-g9n"/>
-                                                <constraint firstItem="lxM-0N-UCI" firstAttribute="top" secondItem="9eg-iF-HaU" secondAttribute="bottom" constant="11" id="Fkh-7S-nEa"/>
+                                                <constraint firstItem="lxM-0N-UCI" firstAttribute="top" secondItem="9eg-iF-HaU" secondAttribute="bottom" constant="-1" id="Fkh-7S-nEa"/>
                                                 <constraint firstItem="lxM-0N-UCI" firstAttribute="top" secondItem="1t1-CX-UWa" secondAttribute="bottom" constant="10.5" id="FsY-mQ-jPp"/>
                                                 <constraint firstItem="xW9-dC-vAP" firstAttribute="leading" secondItem="Sza-8J-Yjw" secondAttribute="leadingMargin" id="KH6-Ym-xOj"/>
-                                                <constraint firstItem="9eg-iF-HaU" firstAttribute="top" secondItem="Sza-8J-Yjw" secondAttribute="topMargin" constant="10" id="KxT-1r-6Nz"/>
+                                                <constraint firstItem="9eg-iF-HaU" firstAttribute="top" secondItem="Sza-8J-Yjw" secondAttribute="topMargin" constant="-7" id="KxT-1r-6Nz"/>
                                                 <constraint firstAttribute="trailing" secondItem="lxM-0N-UCI" secondAttribute="trailing" constant="16" id="Neo-HZ-cbz"/>
                                                 <constraint firstAttribute="trailing" secondItem="1t1-CX-UWa" secondAttribute="trailing" constant="56" id="OgC-AK-vbg"/>
                                                 <constraint firstItem="1t1-CX-UWa" firstAttribute="leading" secondItem="9ZG-2U-aUl" secondAttribute="trailing" id="PB5-B2-pVJ"/>
                                                 <constraint firstItem="lxM-0N-UCI" firstAttribute="leading" secondItem="Sza-8J-Yjw" secondAttribute="leading" constant="16" id="QoF-Qd-PjS"/>
-                                                <constraint firstItem="9eg-iF-HaU" firstAttribute="trailing" secondItem="Sza-8J-Yjw" secondAttribute="trailingMargin" id="RiI-Wu-LxB"/>
+                                                <constraint firstItem="9eg-iF-HaU" firstAttribute="trailing" secondItem="Sza-8J-Yjw" secondAttribute="trailingMargin" constant="10" id="RiI-Wu-LxB"/>
                                                 <constraint firstItem="lxM-0N-UCI" firstAttribute="top" secondItem="xW9-dC-vAP" secondAttribute="bottom" constant="16" id="XtB-5n-QjC"/>
                                                 <constraint firstItem="xW9-dC-vAP" firstAttribute="top" secondItem="Sza-8J-Yjw" secondAttribute="topMargin" constant="16" id="aQa-8r-P2T"/>
                                                 <constraint firstItem="lxM-0N-UCI" firstAttribute="top" secondItem="9ZG-2U-aUl" secondAttribute="bottom" constant="10" id="hvR-sR-AvN"/>
