--- a/MoppApp/MoppApp/Container.storyboard
+++ b/MoppApp/MoppApp/Container.storyboard
@@ -97,19 +97,34 @@
                                                     <color key="textColor" red="0.35686274509999999" green="0.35686274509999999" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RpZ-cI-EfY">
+                                                    <rect key="frame" x="619" y="15" width="32" height="29"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="29" id="0S7-Sc-u4t"/>
+                                                        <constraint firstAttribute="width" constant="32" id="tYg-Io-NIK"/>
+                                                    </constraints>
+                                                    <state key="normal" image="Icon_Edit"/>
+                                                    <connections>
+                                                        <action selector="editContainerName:" destination="8UE-UF-0gf" eventType="touchUpInside" id="oJM-iR-vkL"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="c0X-dZ-CUW" firstAttribute="trailing" secondItem="LSq-om-Kbe" secondAttribute="trailingMargin" id="6jK-St-9rL"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="RpZ-cI-EfY" secondAttribute="bottom" constant="3" id="BP7-WG-ecj"/>
+                                                <constraint firstItem="RpZ-cI-EfY" firstAttribute="top" secondItem="LSq-om-Kbe" secondAttribute="topMargin" constant="4" id="D6p-zC-iuU"/>
                                                 <constraint firstItem="c0X-dZ-CUW" firstAttribute="top" secondItem="LSq-om-Kbe" secondAttribute="top" constant="8" id="MNZ-Cb-DAd"/>
                                                 <constraint firstItem="LLq-ND-CCZ" firstAttribute="leading" secondItem="LSq-om-Kbe" secondAttribute="leadingMargin" id="Nk0-9J-KlJ"/>
                                                 <constraint firstItem="LLq-ND-CCZ" firstAttribute="top" secondItem="c0X-dZ-CUW" secondAttribute="bottom" constant="5" id="W9R-X5-EQ6"/>
                                                 <constraint firstItem="c0X-dZ-CUW" firstAttribute="leading" secondItem="LSq-om-Kbe" secondAttribute="leadingMargin" id="cOI-Mn-nbQ"/>
                                                 <constraint firstItem="LLq-ND-CCZ" firstAttribute="trailing" secondItem="LSq-om-Kbe" secondAttribute="trailingMargin" id="d31-nz-sUc"/>
+                                                <constraint firstItem="RpZ-cI-EfY" firstAttribute="trailing" secondItem="LSq-om-Kbe" secondAttribute="trailingMargin" id="eps-oW-BGs"/>
                                                 <constraint firstAttribute="bottom" secondItem="LLq-ND-CCZ" secondAttribute="bottom" constant="8" id="sse-2b-HFB"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
+                                            <outlet property="editContainerNameButton" destination="RpZ-cI-EfY" id="db2-cR-2Pi"/>
                                             <outlet property="filenameLabel" destination="LLq-ND-CCZ" id="TTb-DW-Jcm"/>
                                             <outlet property="titleLabel" destination="c0X-dZ-CUW" id="DZL-Jk-2yZ"/>
                                         </connections>
@@ -556,19 +571,34 @@
                                                     <color key="textColor" red="0.35686274509999999" green="0.35686274509999999" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ACm-df-AwI">
+                                                    <rect key="frame" x="619" y="15" width="32" height="29"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="32" id="Ibn-M3-L77"/>
+                                                        <constraint firstAttribute="height" constant="43" id="Wo8-6a-KWj"/>
+                                                    </constraints>
+                                                    <state key="normal" image="Icon_Edit"/>
+                                                    <connections>
+                                                        <action selector="editContainerName:" destination="80l-wY-1RX" eventType="touchUpInside" id="aaB-ju-jTk"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="Wqp-Q2-Ev2" firstAttribute="trailing" secondItem="uwJ-uK-g1I" secondAttribute="trailingMargin" id="dbl-WH-SMk"/>
                                                 <constraint firstAttribute="bottom" secondItem="Wqp-Q2-Ev2" secondAttribute="bottom" constant="8" id="flz-VQ-fYa"/>
+                                                <constraint firstItem="ACm-df-AwI" firstAttribute="top" secondItem="uwJ-uK-g1I" secondAttribute="topMargin" constant="4" id="hgq-g1-iSA"/>
                                                 <constraint firstItem="qZK-FE-KFD" firstAttribute="top" secondItem="uwJ-uK-g1I" secondAttribute="top" constant="8" id="kXg-ar-sqg"/>
                                                 <constraint firstItem="qZK-FE-KFD" firstAttribute="leading" secondItem="uwJ-uK-g1I" secondAttribute="leadingMargin" id="oXF-Rd-ogK"/>
                                                 <constraint firstItem="qZK-FE-KFD" firstAttribute="trailing" secondItem="uwJ-uK-g1I" secondAttribute="trailingMargin" id="ogl-qP-gYf"/>
+                                                <constraint firstItem="ACm-df-AwI" firstAttribute="trailing" secondItem="uwJ-uK-g1I" secondAttribute="trailingMargin" id="qOc-ug-ihY"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="ACm-df-AwI" secondAttribute="bottom" constant="3" id="uZV-eN-TYx"/>
                                                 <constraint firstItem="Wqp-Q2-Ev2" firstAttribute="top" secondItem="qZK-FE-KFD" secondAttribute="bottom" constant="5" id="ugh-gS-ShF"/>
                                                 <constraint firstItem="Wqp-Q2-Ev2" firstAttribute="leading" secondItem="uwJ-uK-g1I" secondAttribute="leadingMargin" id="zQw-Rr-tDE"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
+                                            <outlet property="editContainerNameButton" destination="ACm-df-AwI" id="TvR-gu-Y7r"/>
                                             <outlet property="filenameLabel" destination="Wqp-Q2-Ev2" id="PR5-cZ-oO2"/>
                                             <outlet property="titleLabel" destination="qZK-FE-KFD" id="e5u-hY-rnD"/>
                                         </connections>
@@ -837,7 +867,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J2g-nF-ccG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="28" y="811"/>
+            <point key="canvasLocation" x="27.436281859070466" y="810.39999999999998"/>
         </scene>
         <!--Addressee View Controller-->
         <scene sceneID="rzB-El-9Ug">
@@ -1091,6 +1121,7 @@
     </scenes>
     <resources>
         <image name="IconCryptoSelected" width="22" height="25"/>
+        <image name="Icon_Edit" width="17" height="19"/>
         <image name="Icon_ajatempel" width="17" height="17"/>
         <image name="iconDownload" width="25" height="25"/>
         <image name="icon_remove-1" width="25" height="25"/>
