--- a/MoppApp/MoppApp/Settings.storyboard
+++ b/MoppApp/MoppApp/Settings.storyboard
@@ -267,10 +267,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ki8-k3-cmp">
-                                <rect key="frame" x="0.0" y="103" width="375" height="897"/>
+                                <rect key="frame" x="0.0" y="103" width="375" height="899"/>
                                 <subviews>
                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P3E-QG-6de">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="907"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="899"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Rakenduse versioon: " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a1h-Wv-jK4">
                                                 <rect key="frame" x="15" y="8" width="345" height="20"/>
@@ -391,8 +391,15 @@
                                                 <color key="textColor" systemColor="darkTextColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="9M0-ZI-Vph">
+                                                <rect key="frame" x="14" y="541" width="346" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <color key="textColor" systemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ljx-rt-qve">
-                                                <rect key="frame" x="16" y="755" width="343" height="30"/>
+                                                <rect key="frame" x="14" y="806" width="343" height="22"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                                 <state key="normal" title="REFRESH CONFIGURATION"/>
@@ -401,49 +408,49 @@
                                                 </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Central Configuration:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="TtS-74-evo">
-                                                <rect key="frame" x="17" y="541" width="344" height="21"/>
+                                                <rect key="frame" x="14" y="592" width="344" height="21"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                 <color key="textColor" systemColor="darkTextColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="l32-s5-RMt">
-                                                <rect key="frame" x="17" y="568" width="344" height="21"/>
+                                                <rect key="frame" x="14" y="619" width="344" height="21"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                 <color key="textColor" systemColor="darkTextColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="v3j-1F-BkV">
-                                                <rect key="frame" x="18" y="596" width="343" height="21"/>
+                                                <rect key="frame" x="16" y="647" width="343" height="21"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                 <color key="textColor" systemColor="darkTextColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="GoO-ax-djg">
-                                                <rect key="frame" x="18" y="626" width="343" height="21"/>
+                                                <rect key="frame" x="16" y="677" width="343" height="21"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                 <color key="textColor" systemColor="darkTextColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="lJS-SP-IrB">
-                                                <rect key="frame" x="18" y="655" width="343" height="21"/>
+                                                <rect key="frame" x="16" y="706" width="343" height="21"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                 <color key="textColor" systemColor="darkTextColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ICY-hq-vOj">
-                                                <rect key="frame" x="18" y="685" width="344" height="20"/>
+                                                <rect key="frame" x="16" y="736" width="344" height="20"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                 <color key="textColor" systemColor="darkTextColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8If-1L-pXu">
-                                                <rect key="frame" x="18" y="713" width="344" height="20"/>
+                                                <rect key="frame" x="16" y="764" width="344" height="20"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                 <color key="textColor" systemColor="darkTextColor"/>
@@ -452,7 +459,7 @@
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="907" id="OUF-l6-IeI"/>
+                                            <constraint firstAttribute="height" constant="899" id="OUF-l6-IeI"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -460,7 +467,7 @@
                                     <constraint firstItem="P3E-QG-6de" firstAttribute="leading" secondItem="Ki8-k3-cmp" secondAttribute="leading" id="FUP-4n-Ouf"/>
                                     <constraint firstItem="P3E-QG-6de" firstAttribute="top" secondItem="Ki8-k3-cmp" secondAttribute="top" id="PgN-gg-krI"/>
                                     <constraint firstAttribute="trailing" secondItem="P3E-QG-6de" secondAttribute="trailing" id="b0t-Ng-d1q"/>
-                                    <constraint firstAttribute="bottom" secondItem="P3E-QG-6de" secondAttribute="bottom" constant="-103" id="ca3-mm-ei8"/>
+                                    <constraint firstAttribute="bottom" secondItem="P3E-QG-6de" secondAttribute="bottom" id="ca3-mm-ei8"/>
                                 </constraints>
                             </scrollView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Diagnostics" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vsg-kH-FdR">
@@ -495,10 +502,10 @@
                             <constraint firstItem="BfW-sn-d7r" firstAttribute="centerY" secondItem="Vsg-kH-FdR" secondAttribute="centerY" constant="2.5" id="MTz-E3-v8w"/>
                             <constraint firstItem="P3E-QG-6de" firstAttribute="width" secondItem="urH-58-wqg" secondAttribute="width" id="NtA-Ox-vLZ"/>
                             <constraint firstItem="Vsg-kH-FdR" firstAttribute="leading" secondItem="ieV-Tc-v8g" secondAttribute="leading" constant="68" id="Pmw-5Y-UCF"/>
-                            <constraint firstItem="P3E-QG-6de" firstAttribute="height" secondItem="urH-58-wqg" secondAttribute="height" priority="250" id="U4F-8w-eSw"/>
+                            <constraint firstItem="P3E-QG-6de" firstAttribute="height" secondItem="urH-58-wqg" secondAttribute="height" priority="250" constant="-101" id="U4F-8w-eSw"/>
                             <constraint firstItem="Ki8-k3-cmp" firstAttribute="top" secondItem="urH-58-wqg" secondAttribute="top" constant="103" id="bHb-MF-7u9"/>
                             <constraint firstItem="ieV-Tc-v8g" firstAttribute="trailing" secondItem="BfW-sn-d7r" secondAttribute="trailing" constant="16" id="nXE-7S-Vo1"/>
-                            <constraint firstItem="Ki8-k3-cmp" firstAttribute="bottom" secondItem="ieV-Tc-v8g" secondAttribute="bottom" id="tC1-Ac-ako"/>
+                            <constraint firstItem="Ki8-k3-cmp" firstAttribute="bottom" secondItem="ieV-Tc-v8g" secondAttribute="bottom" constant="2" id="tC1-Ac-ako"/>
                         </constraints>
                     </view>
                     <size key="freeformSize" width="375" height="1000"/>
@@ -521,6 +528,7 @@
                         <outlet property="mobileIdURL" destination="nTe-hi-UFW" id="vDk-Yq-Mbg"/>
                         <outlet property="opSysVersionLabel" destination="0IR-hS-aJO" id="bMG-ZH-P2B"/>
                         <outlet property="refreshConfigurationLabel" destination="Ljx-rt-qve" id="kf7-hD-PVS"/>
+                        <outlet property="rpUUIDInfo" destination="9M0-ZI-Vph" id="hFZ-Ln-SfA"/>
                         <outlet property="sivaURL" destination="mys-OT-GnR" id="urG-d8-7zH"/>
                         <outlet property="smartIdSKURL" destination="ruH-oH-HXZ" id="mkI-1f-AwI"/>
                         <outlet property="smartIdURL" destination="axW-Sz-ktm" id="Uc2-Sx-eU7"/>
